# notas-musicais

./: mkdocs.yml  pyproject.toml
.github/: pipeline.yaml
.github/workflows/: pipeline.yaml
docs/: 01_tutorial.md  index.md
docs/api/: acordes.md  campo_harmonico.md  escalas.md  test.md
docs/templates/: cards.html  instalacao.md
notas_musicais/: __init__.py  acordes.py  campo_harmonico.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
